--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
     <!-- Nav bar com o botão de login -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Seg Pronta</a>
+    <nav class="navbar navbar-expand-lg myNav">
+        <div class="container-fluid ">
+            <a class="navbar-brand" href="index.html">Seg Pronta</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -24,13 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Setores & Vias</a>
+                        <a class="nav-link active" aria-current="page" href="setores-vias.html">Setores & Vias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Cadastrar Setor/Via</a>
+                        <a class="nav-link active" aria-current="page" href="noticias.html">Notícias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Favoritos</a>
+                        <a class="nav-link active" aria-current="page" href="equipamentos.html">Equipamentos</a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-outline-dark">Login or Sign Up</button>
@@ -96,39 +96,41 @@
     <!-- Grade com os cards dos setores -->
     <div class="container text-start">
         <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 gy-4" >
+            <div class="col-sm-12 col-md-6 col-lg-4 gy-4">
                 <div class="card h-100 w-100 " style="width: 18rem;">
                     <img src="images/corupa.jpg" class="card-img-top img-setor" alt="Cartão postar de Corupa">
                     <div class="card-body">
                         <h5 class="card-title">Corupá – Parque do Braço Esquerdo</h5>
                         <p class="card-text">Paredões imponentes cercados pela Mata Atlântica. Corupá é o cenário ideal
                             para quem curte vias longas e natureza viva.</p>
-                        <!-- Botão do card -->  
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <!-- Botão do card -->
+                        <a href="setores-vias.html" class="btn btn-warning">Ver Setor</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 gy-4">
                 <div class="card h-100 w-100" style="width: 18rem;">
-                    <img src="images/setor-amigos.jpg" class="card-img-top img-setor" alt="Cartão postar de Setor amigos">
+                    <img src="images/setor-amigos.jpg" class="card-img-top img-setor"
+                        alt="Cartão postar de Setor amigos">
                     <div class="card-body">
                         <h5 class="card-title">Piraí do Sul – Setor Amigos</h5>
                         <p class="card-text">Blocos sólidos, boas agarras e clima de confraria. O Setor Amigos é
                             perfeito para quem busca desafios técnicos e boas risadas.</p>
-                        <!-- Botão do card -->  
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <!-- Botão do card -->
+                        <a href="setores-vias.html" class="btn btn-warning">Ver Setor</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 gy-4">
                 <div class="card h-100 w-100" style="width: 18rem;">
-                    <img src="images/gruta-de-caxias.jpg" class="card-img-top img-setor" alt="Cartão postar de Gruta de Caixas">
+                    <img src="images/gruta-de-caxias.jpg" class="card-img-top img-setor"
+                        alt="Cartão postar de Gruta de Caixas">
                     <div class="card-body">
                         <h5 class="card-title">Caxias do Sul – Gruta</h5>
                         <p class="card-text">Escalada esportiva em um dos pontos mais tradicionais da serra gaúcha. A
                             Gruta oferece vias explosivas e clima místico.</p>
-                        <!-- Botão do card -->    
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <!-- Botão do card -->
+                        <a href="setores-vias.html" class="btn btn-warning">Ver Setor</a>
                     </div>
                 </div>
             </div>
@@ -136,14 +138,99 @@
     </div>
 
 
+    <!--Informativo sobre noticias-->
+    <div class="container-fluid p-5 c-news ">
+        <h1 class="text-start display-1 pt-5 mt-3">Novidades na parede</h1>
+        <p class="lead fs-1">Fique por dentro das últimas notícias do mundo da escalada.
+            Atualizações sobre setores, conquistas, eventos e muito mais</p>
+        <div class="d-md-flex justify-content-md-end mt-3 py-5">
+            <a class="btn btn-outline-secondary btn-lg" href="noticias.html" role="button">Ver todas as notícias</a>
+        </div>
+    </div>
 
-
-
+    <!-- Informativo sobre equipamentos -->
+    <div class="container-fluid p-5 bg-light">
+        <h1 class="text-end display-1 pt-5 mt-3">Equipamento na medida</h1>
+        <p class="lead fs-1 text-end">
+            Conheça os equipamentos essenciais para cada tipo de escalada<br>
+            Dicas, reviews e informações para você escalar com mais segurança e confiança
+        </p>
+        <div class="d-md-flex justify-content-md-start mt-3 py-5">
+            <a class="btn btn-outline-secondary btn-lg" href="equipamentos.html" role="button">Ver equipamentos</a>
+        </div>
+    </div> 
+    
+    <!-- Footer com links -->
+    <footer class="myFoot">
+        <div class="container text-start pt-5 pb-2">
+            <div class="row gx-3">
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Info</h3>
+                </div>
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Explorar</h3>
+                </div>
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Redes</h3>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sobre
+                            o site</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="setores-vias.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Setores
+                            e Vias</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instagram</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Contato</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p><a href="equipamentos.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Equipamentos
+                        </a></p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">YouTube</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Termos
+                            de uso</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="noticias.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Notícias</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Enviar
+                            sugestão de setor</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
         </script>
-
 
 </body>
 
