--- a/noticias.html
+++ b/noticias.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
-<body>
+<body >
 
     <!-- Nav bar com o botão de login -->
     <nav class="navbar navbar-expand-lg myNav">
@@ -37,6 +37,184 @@
             </div>
         </div>
     </nav>
+
+
+    <div class="position-relative">
+        <!-- Imagem de fundo -->
+        <div class="position-absolute top-0 start-0 w-100 h-100" style="
+    background-image: url('images/montanhas-suave.jpg');
+    background-size: cover;
+    background-position: center;
+    opacity: 0.5;
+    z-index: 0;">
+        </div>
+
+        <!-- Conteúdo principal -->
+        <div class="container py-5 px-3 px-md-5">
+            <h1 class="mb-5 text-center display-4 fw-bold border-bottom pb-3" style="text-shadow: 1px 1px 4px rgba(0,0,0,0.7);">Notícias da Escalada</h1>
+
+            <!-- Notícia 1 -->
+            <div class="card mb-4 shadow-sm border-0 rounded-4">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/noticias_gruta.jpg" class="img-fluid rounded-start" alt="Setor da Gruta">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Reequipagem no Setor da Gruta (Caxias do Sul)</h5>
+                            <p class="card-text">Uma força-tarefa local reequipou vias clássicas na Gruta com parabolts
+                                inox. A segurança das linhas foi reforçada, e algumas graduações foram atualizadas.</p>
+                            <p class="card-text"><small class="text-muted">Publicado em 10 de junho de 2025</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Notícia 2 -->
+            <div class="card mb-4 shadow-sm border-0 rounded-4">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/noticias_perfectoMundo.jpg" class="img-fluid rounded-start news-img"
+                            alt="Escalador na Espanha">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Escalador brasileiro encadena 9a+ na Espanha</h5>
+                            <p class="card-text">Lucas Mendonça fez história ao encadenar a via “Perfecto Mundo” em
+                                Margalef. É o primeiro brasileiro a atingir esse grau em solo europeu.</p>
+                            <p class="card-text"><small class="text-muted">Publicado em 6 de junho de 2025</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Notícia 3 -->
+            <div class="card mb-4 shadow-sm border-0 rounded-4">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/noticias_boulderMG.jpg" class="img-fluid rounded-start news-img" alt="Boulders em Minas">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Nova área de boulder descoberta em Minas Gerais</h5>
+                            <p class="card-text">Um grupo de escaladores encontrou dezenas de blocos virgens próximos a
+                                Ouro
+                                Preto. As primeiras linhas já estão sendo catalogadas.</p>
+                            <p class="card-text"><small class="text-muted">Publicado em 2 de junho de 2025</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Notícia 4 -->
+            <div class="card mb-4 shadow-sm border-0 rounded-4">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/noticias_pirai.jpg" class="img-fluid rounded-start news-img" alt="Evento em Piraí" >
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Encontro de escaladores em Piraí confirma edição 2025</h5>
+                            <p class="card-text">O tradicional Encontro dos Amigos já tem data marcada: 5 a 7 de
+                                setembro. O
+                                evento contará com oficinas, festas e mutirão de limpeza no setor.</p>
+                            <p class="card-text"><small class="text-muted">Publicado em 30 de maio de 2025</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Notícia 5 -->
+            <div class="card mb-4 shadow-sm border-0 rounded-4">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/noticias_seloSustentavel.jpg" class="img-fluid rounded-start news-img" 
+                            alt="Escalada Sustentável">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Iniciativa propõe selo para vias sustentáveis</h5>
+                            <p class="card-text">Projeto piloto quer identificar setores que seguem boas práticas
+                                ambientais, como uso de magnésio líquido, trilhas sinalizadas e mínimo impacto.</p>
+                            <p class="card-text"><small class="text-muted">Publicado em 25 de maio de 2025</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer com links -->
+        <footer class="myFoot" style="opacity: 0.8;">
+            <div class="container text-start pt-5 pb-2">
+                <div class="row gx-3">
+                    <div class="col">
+                        <h3 class="text-start display-5 fs-3">Info</h3>
+                    </div>
+                    <div class="col">
+                        <h3 class="text-start display-5 fs-3">Explorar</h3>
+                    </div>
+                    <div class="col">
+                        <h3 class="text-start display-5 fs-3">Redes</h3>
+                    </div>
+                </div>
+                <div class="row gx-3">
+                    <div class="col">
+                        <p><a href="#"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sobre
+                                o site</a></p>
+                    </div>
+                    <div class="col">
+                        <p><a href="setores-vias.html"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Setores
+                                e Vias</a></p>
+                    </div>
+                    <div class="col">
+                        <p><a href="#"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instagram</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row gx-3">
+                    <div class="col">
+                        <p><a href="#"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Contato</a>
+                        </p>
+                    </div>
+                    <div class="col">
+                        <p><a href="equipamentos.html"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Equipamentos
+                            </a></p>
+                    </div>
+                    <div class="col">
+                        <p><a href="#"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">YouTube</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row gx-3">
+                    <div class="col">
+                        <p><a href="#"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Termos
+                                de uso</a></p>
+                    </div>
+                    <div class="col">
+                        <p><a href="noticias.html"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Notícias</a>
+                        </p>
+                    </div>
+                    <div class="col">
+                        <p><a href="#"
+                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Enviar
+                                sugestão de setor</a></p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
+            </script>
 
 </body>
 
