--- a/equipamentos.html
+++ b/equipamentos.html
@@ -38,6 +38,157 @@
         </div>
     </nav>
 
+    <section class="container py-5">
+        <h1 class="text-center display-4 fw-bold">Equipamentos de Escalada</h1>
+        <p class="text-center lead mb-5 border-bottom pb-3">
+            Conheça os principais equipamentos usados na escalada esportiva, tradicional e boulder.
+            Saiba quando usar, como escolher e como cuidar.
+        </p>
+
+        <!-- Equipamento 1 -->
+        <div class="row align-items-center mb-5">
+            <div class="col-md-6">
+                <img src="images/sapatilha.jpg" class="img-fluid rounded shadow-sm" alt="Sapatilha de escalada">
+            </div>
+            <div class="col-md-6">
+                <h2 class="fw-bold">Sapatilhas</h2>
+                <p class="lead">Essenciais para precisão nos apoios, as sapatilhas variam em formato, rigidez e
+                    aderência. A escolha certa melhora seu desempenho e conforto.</p>
+            </div>
+        </div>
+
+        <!-- Equipamento 2 -->
+        <div class="row align-items-center mb-5 flex-md-row-reverse">
+            <div class="col-md-6">
+                <img src="images/corda.webp" class="img-fluid rounded shadow-sm" alt="Corda de escalada">
+            </div>
+            <div class="col-md-6">
+                <h2 class="fw-bold">Cordas</h2>
+                <p class="lead">Cordas dinâmicas absorvem impactos em quedas e são classificadas por diâmetro, tipo
+                    (simples, dupla, gêmea) e uso indicado.</p>
+            </div>
+        </div>
+
+        <!-- Equipamento 3 -->
+        <div class="row align-items-center mb-5">
+            <div class="col-md-6">
+                <img src="images/mosquetões.jpg" class="img-fluid rounded shadow-sm" alt="Mosquetão">
+            </div>
+            <div class="col-md-6">
+                <h2 class="fw-bold">Mosquetões</h2>
+                <p class="lead">Conectores fundamentais em qualquer sistema, variam entre modelos com ou sem trava,
+                    leves ou robustos, cada um com função específica.</p>
+            </div>
+        </div>
+
+        <!-- Equipamento 4 -->
+        <div class="row align-items-center mb-5 flex-md-row-reverse">
+            <div class="col-md-6">
+                <img src="images/costuras.jpeg" class="img-fluid rounded shadow-sm" alt="Costura de escalada">
+            </div>
+            <div class="col-md-6">
+                <h2 class="fw-bold">Costuras</h2>
+                <p class="lead">Usadas para proteger o escalador durante a subida, as costuras unem dois mosquetões com
+                    uma fita resistente, permitindo o clipe da corda.</p>
+            </div>
+        </div>
+
+        <!-- Equipamento 5 -->
+        <div class="row align-items-center mb-5">
+            <div class="col-md-6">
+                <img src="images/freios.jpg" class="img-fluid rounded shadow-sm" alt="Freio tipo Grigri">
+            </div>
+            <div class="col-md-6">
+                <h2 class="fw-bold">Freios</h2>
+                <p class="lead">Dispositivos de segurança para controlar a descida e a queda do escalador. Grigri, ATC,
+                    Reverso e outros modelos têm usos distintos.</p>
+            </div>
+        </div>
+
+        <!-- Equipamento 6 -->
+        <div class="row align-items-center mb-5 flex-md-row-reverse">
+            <div class="col-md-6">
+                <img src="images/capacetes.jpg" class="img-fluid rounded shadow-sm" alt="Capacete de escalada">
+            </div>
+            <div class="col-md-6">
+                <h2 class="fw-bold">Capacete</h2>
+                <p class="lead">Protege contra quedas de rocha, impactos e acidentes em geral. Leve, ventilado e
+                    ajustado: um item essencial para qualquer via.</p>
+            </div>
+        </div>
+
+    </section>
+
+
+
+    <!-- Footer com links -->
+    <footer class="myFoot">
+        <div class="container text-start pt-5 pb-2">
+            <div class="row gx-3">
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Info</h3>
+                </div>
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Explorar</h3>
+                </div>
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Redes</h3>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sobre
+                            o site</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="setores-vias.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Setores
+                            e Vias</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instagram</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Contato</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p><a href="equipamentos.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Equipamentos
+                        </a></p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">YouTube</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Termos
+                            de uso</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="noticias.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Notícias</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Enviar
+                            sugestão de setor</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
