Setores e Vias pronto, add icon heart, add short cut in idex to setor.

--- a/noticias.html
+++ b/noticias.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
-<body >
+<body>
 
     <!-- Nav bar com o botão de login -->
     <nav class="navbar navbar-expand-lg myNav">
@@ -33,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="equipamentos.html">Equipamentos</a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-outline-dark">Login or Sign Up</button>
+                <a type="button" class="btn btn-outline-dark" href="login.html">Login or Sign Up</a>
             </div>
         </div>
     </nav>
@@ -51,7 +51,8 @@
 
         <!-- Conteúdo principal -->
         <div class="container py-5 px-3 px-md-5">
-            <h1 class="mb-5 text-center display-4 fw-bold border-bottom pb-3" style="text-shadow: 1px 1px 4px rgba(0,0,0,0.7);">Notícias da Escalada</h1>
+            <h1 class="mb-5 text-center display-4 fw-bold border-bottom pb-3"
+                style="text-shadow: 1px 1px 4px rgba(0,0,0,0.7);">Notícias da Escalada</h1>
 
             <!-- Notícia 1 -->
             <div class="card mb-4 shadow-sm border-0 rounded-4">
@@ -92,7 +93,8 @@
             <div class="card mb-4 shadow-sm border-0 rounded-4">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="images/noticias_boulderMG.jpg" class="img-fluid rounded-start news-img" alt="Boulders em Minas">
+                        <img src="images/noticias_boulderMG.jpg" class="img-fluid rounded-start news-img"
+                            alt="Boulders em Minas">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -110,7 +112,8 @@
             <div class="card mb-4 shadow-sm border-0 rounded-4">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="images/noticias_pirai.jpg" class="img-fluid rounded-start news-img" alt="Evento em Piraí" >
+                        <img src="images/noticias_pirai.jpg" class="img-fluid rounded-start news-img"
+                            alt="Evento em Piraí">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -128,7 +131,7 @@
             <div class="card mb-4 shadow-sm border-0 rounded-4">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="images/noticias_seloSustentavel.jpg" class="img-fluid rounded-start news-img" 
+                        <img src="images/noticias_seloSustentavel.jpg" class="img-fluid rounded-start news-img"
                             alt="Escalada Sustentável">
                     </div>
                     <div class="col-md-8">
