--- a/equipamentos.html
+++ b/equipamentos.html
@@ -33,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="equipamentos.html">Equipamentos</a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-outline-dark">Login or Sign Up</button>
+                <a type="button" class="btn btn-outline-dark" href="login.html">Login or Sign Up</a>
             </div>
         </div>
     </nav>
@@ -188,6 +188,10 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
+        </script>
 
 </body>
 
