--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link active" aria-current="page" href="equipamentos.html">Equipamentos</a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-outline-dark">Login or Sign Up</button>
+                <a type="button" class="btn btn-outline-dark" href="login.html">Login or Sign Up</a>
             </div>
         </div>
     </nav>
@@ -104,7 +104,7 @@
                         <p class="card-text">Paredões imponentes cercados pela Mata Atlântica. Corupá é o cenário ideal
                             para quem curte vias longas e natureza viva.</p>
                         <!-- Botão do card -->
-                        <a href="setores-vias.html" class="btn btn-warning">Ver Setor</a>
+                        <a href="setores-vias.html#corupa" class="btn btn-warning">Ver Setor</a>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                         <p class="card-text">Blocos sólidos, boas agarras e clima de confraria. O Setor Amigos é
                             perfeito para quem busca desafios técnicos e boas risadas.</p>
                         <!-- Botão do card -->
-                        <a href="setores-vias.html" class="btn btn-warning">Ver Setor</a>
+                        <a href="setores-vias.html#setorAmigos" class="btn btn-warning">Ver Setor</a>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                         <p class="card-text">Escalada esportiva em um dos pontos mais tradicionais da serra gaúcha. A
                             Gruta oferece vias explosivas e clima místico.</p>
                         <!-- Botão do card -->
-                        <a href="setores-vias.html" class="btn btn-warning">Ver Setor</a>
+                        <a href="setores-vias.html#gruta" class="btn btn-warning">Ver Setor</a>
                     </div>
                 </div>
             </div>
@@ -158,8 +158,8 @@
         <div class="d-md-flex justify-content-md-start mt-3 py-5">
             <a class="btn btn-outline-secondary btn-lg" href="equipamentos.html" role="button">Ver equipamentos</a>
         </div>
-    </div> 
-    
+    </div>
+
     <!-- Footer com links -->
     <footer class="myFoot">
         <div class="container text-start pt-5 pb-2">
@@ -229,8 +229,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
-        </script>
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 
 </body>
 
