--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    
+
     <!-- Nav bar com o botão de login -->
     <nav class="navbar navbar-expand-lg myNav">
         <div class="container-fluid ">
@@ -33,10 +33,108 @@
                         <a class="nav-link active" aria-current="page" href="equipamentos.html">Equipamentos</a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-outline-dark">Login or Sign Up</button>
+                <a type="button" class="btn btn-outline-dark" href="login.html">Login or Sign Up</a>
             </div>
         </div>
     </nav>
+
+
+     <!-- Formulario para o login -->
+    <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+        <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
+            <h3 class="text-center mb-4">Entrar no Seg Pronta</h3>
+            <form>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Usuário ou E-mail</label>
+                    <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail">
+                </div>
+                <div class="mb-3">
+                    <label for="senha" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="senha" placeholder="Digite sua senha">
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Entrar</button>
+                <div class="text-center mt-3">
+                    <a href="#">Esqueci minha senha</a><br>
+                    <a href="index.html">← Voltar ao site</a>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+
+
+    <!-- Footer com links -->
+    <footer class="myFoot">
+        <div class="container text-start pt-5 pb-2">
+            <div class="row gx-3">
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Info</h3>
+                </div>
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Explorar</h3>
+                </div>
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Redes</h3>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sobre
+                            o site</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="setores-vias.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Setores
+                            e Vias</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instagram</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Contato</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p><a href="equipamentos.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Equipamentos
+                        </a></p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">YouTube</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Termos
+                            de uso</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="noticias.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Notícias</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p><a href="#"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Enviar
+                            sugestão de setor</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
+        </script>
 
 </body>
 
